-- modul video kedua

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">MarketPlace</string>
-    <string name="hello">Hello Farid Keren</string>
+    <string name="hello">Hello Farid Keren Kedua</string>
 </resources>
